--- a/docs/3.SequenceDiagram.md
+++ b/docs/3.SequenceDiagram.md
@@ -3,6 +3,13 @@
 각 기능별 시퀀스 다이어그램을 통해 해당 서비스의 이해를 돕고자 함.
 --
 
+## 설계 문서
+- [1. 요구사항명세서](/docs/1.Requireements.md)
+- [2. ERD](/docs/2.ERD.md)
+- [2-1 DDL](/src/main/resources/schema.sql)
+- [3. 시퀀스 다이어그램](/docs/3.SequenceDiagram.md)
+- [4. API명세](/docs/4.APISpec.png)
+
 ##  📌 포인트
 ### 포인트 조회
 ```mermaid
